# wg21

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  appveyor.yml  conanfile.py  lin_alg_test.sln
.conan/: build.py
.conan/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
.github/workflows/: cmake.yml  conan.yml  conan.yml-off
.travis/: install.sh  run.sh
.vs2019/: lin_alg_test.sln  lin_alg_test.vcxproj  lin_alg_test.vcxproj.filters
docs/papers/: D1385R1.bs  P1385D7.md  P1385R0.html  P1385R1.html  P1385R2.html  P1385R4.md  P1385R7.md  P1385R8.md
include/: linear_algebra.hpp  matrix  matrix.hpp
include/linear_algebra/: addition_traits.hpp  arithmetic_operators.hpp  basic_matrix.hpp  basic_vector.hpp  debug_helpers.hpp  division_traits.hpp  dynamic_matrix_engine.hpp  dynamic_vector_engine.hpp  engine_support.hpp  fixed_size_matrix_engine.hpp  fixed_size_vector_engine.hpp  forward_declarations.hpp  matrix.hpp  matrix_storage_engine.hpp  matrix_storage_engine_data.hpp  matrix_storage_engine_support.hpp  matrix_view_engine.hpp  mdspan_support.hpp  multiplication_traits.hpp  multiplication_traits_impl.hpp  negation_traits.hpp  negation_traits_impl.hpp  op_traits_addition.hpp  op_traits_division.hpp  op_traits_extractors.hpp  op_traits_multiplication.hpp  op_traits_subtraction.hpp  op_traits_support.hpp  operation_traits.hpp  private_support.hpp  public_support.hpp  subtraction_traits.hpp  subtraction_traits_impl.hpp  traits_support.hpp  vector.hpp  vector_iterators.hpp  vector_view_engine.hpp
linear_algebra/: layout_stride.patch
linear_algebra/call_transcripts/: linear_algebra_call_2018-10-10.txt  linear_algebra_call_2019-01-02.txt
linear_algebra/code/: CMakeLists.txt  alt_test.cpp  interface_test_01.cpp  interface_test_02.cpp  lin_alg_test.sln  lin_alg_test.vcxproj  lin_alg_test.vcxproj.filters  linear_algebra.hpp  linear_algebra_fwd.hpp  matrix.hpp  matrix_arithmetic_traits.hpp  matrix_element_promotions.hpp  matrix_element_traits.hpp  matrix_engine_traits.hpp  matrix_engines.hpp  matrix_fwd.hpp  matrix_operation_traits.hpp  matrix_operator_traits.hpp  matrix_operators.hpp  matrix_test_impl.hpp  test_02.cpp  test_geometry.cpp  test_geometry_2.cpp  test_geometry_3.cpp  test_geometry_4.cpp  test_new_arithmetic.hpp  test_new_engine.hpp  test_new_number.hpp  wg21_linear_algebra-config.cmake.in
linear_algebra/code/include/: linear_algebra.hpp
linear_algebra/code/include/linear_algebra/: addition_traits.hpp  addition_traits_impl.hpp  arithmetic_operators.hpp  arithmetic_traits.hpp  code.hpp  column_engine.hpp  column_views.hpp  debug_helpers.hpp  dynamic_engines.hpp  dynamic_matrix_engine.hpp  dynamic_vector_engine.hpp  element_promotion_traits.hpp  element_traits.hpp  engine_promotion_traits.hpp  engine_traits.hpp  fixed_size_engines.hpp  fixed_size_matrix_engine.hpp  fixed_size_vector_engine.hpp  forward_declarations.hpp  helper_traits.hpp  library_aliases.hpp  matrix.hpp  matrix_test_impl.hpp  matrix_view_engine.hpp  multiplication_traits.hpp  multiplication_traits_impl.hpp  negation_traits.hpp  negation_traits_impl.hpp  number_traits.hpp  operation_traits.hpp  operator_promotion_traits.hpp  operator_traits.hpp  operator_traits_selector.hpp  private_support.hpp  public_support.hpp  row_column_views.hpp  row_engine.hpp  row_views.hpp  submatrix_engine.hpp  subtraction_traits.hpp  (+8 more)
linear_algebra/code/test/: pch.cpp  test_00.cpp  test_01.cpp  test_02.cpp  test_common.hpp  test_dynamic_engines.cpp  test_fixed_size_engines.cpp  test_fs_engines.cpp  test_main.cpp  test_new_arithmetic.hpp  test_new_engine.hpp  test_new_number.hpp  test_obj_matrix.cpp  test_op_add.cpp  test_op_add_traits.cpp  test_op_mul.cpp  test_op_mul_traits.cpp  test_op_neg.cpp  test_op_neg_traits.cpp  test_op_sub.cpp
linear_algebra/minutes/: 2018-11-09_SanDiego_linear_algebra_meeting.txt  2018-12-05_linear_algebra_call.txt  2019-02-06_linear_algebra_call.txt  2019-02-20_Kona_D1385R1_review_LEWGI.txt  2019-02-22_Kona_D1385R1_review_SG14_SG19.txt  2019-03-06_linear_algebra_call.txt
linear_algebra/papers/: D1385R1.bs  D1385R1.html  D1385R3.bs  D1385R3.html  D1385R3.md  D1385R4.md  P1385R0.bs  P1385R1-draft.bs  P1385R1-draft.html  P1385R1.bs  P1385R1.html  P1385R2.bs  P1385R2.html  P1385R3.html  P1385R3.md  P1385R5.md  P1385R6.html  P1385R6.md  P2078R0.md  P2078R1.md
tests/: CMakeLists.txt  test_01.cpp  test_02.cpp  test_common.hpp  test_dynamic_engines.cpp  test_fixed_size_engines.cpp  test_geometry_2.cpp  test_geometry_3.cpp  test_geometry_4.cpp  test_main.cpp  test_matrix_storage_engines.cpp  test_matrix_view_engines.cpp  test_mse_00.cpp  test_mse_01.cpp  test_mse_03.cpp  test_mse_04.cpp  test_mse_2A.cpp  test_mse_2B.cpp  test_mse_2C.cpp  test_mse_3A.cpp  test_mse_3B.cpp  test_mse_3C.cpp  test_mse_4A.cpp  test_mse_4B.cpp  test_mse_4C.cpp  test_mse_4D.cpp  test_mse_4E.cpp  test_mve_00.cpp  test_new_arithmetic.hpp  test_new_engine.hpp  test_new_number.hpp  test_obj_matrix.cpp  test_op_add.cpp  test_op_add_traits.cpp  test_op_div.cpp  test_op_div_traits.cpp  test_op_mul.cpp  test_op_mul_traits.cpp  test_op_neg_traits.cpp  test_op_sub.cpp  (+2 more)
